# torch-uncertainty

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  codecov.yml  pyproject.toml  pyrightconfig.json  setup.py
.github/workflows/: build-docs.yml  pypi-publish.yml  pypitest-publish.yml  run-tests.yml
auto_tutorial_source/Bayesian_Methods/: README.txt  tuto_ood.py  tutorial_bayesian.py  tutorial_conformal.py  tutorial_mc_batch_norm.py  tutorial_mc_dropout.py  tutorial_muad_mc_drop.py
auto_tutorial_source/Classification/: tutorial_bayesian.py  tutorial_bert.py  tutorial_classification.py  tutorial_distribution_shift.py  tutorial_evidential_classification.py  tutorial_mc_batch_norm.py  tutorial_mc_dropout.py  tutorial_ood_detection.py  tutorial_pe_cifar10.py  tutorial_vit.py
auto_tutorial_source/Data_Augmentation/: README.txt  tutorial_corruption.py
auto_tutorial_source/Ensemble_Methods/: README.txt  tutorial_from_de_to_pe.py  tutorial_muad_deep_en.py  tutorial_pe_cifar10.py
auto_tutorial_source/Evidential_methods/: README.txt  tutorial_evidential_classification.py
auto_tutorial_source/Model_Calibration/: tutorial_scaler.py
auto_tutorial_source/Post_Hoc_Methods/: README.txt  tutorial_conformal.py  tutorial_scaler.py
auto_tutorial_source/Regression/: README.txt  tutorial_der_cubic.py  tutorial_probabilistic_regression.py  tutorial_regression.py
auto_tutorial_source/Segmentation/: tutorial_muad_deep_en.py  tutorial_muad_packed.py  tutorial_muad_seg.py
auto_tutorials_source/: README.rst  index.rst  pe_cifar10_tutorial.py  tuto_ood.py  tutorial_bayesian.py  tutorial_conformal.py  tutorial_corruption.py  tutorial_corruptions.py  tutorial_dec_cubic.py  tutorial_der_cubic.py  tutorial_evidential_classification.py  tutorial_from_de_to_pe.py  tutorial_mc_batch_norm.py  tutorial_mc_dropout.py  tutorial_pe_cifar10.py  tutorial_scaler.py
auto_tutorials_source/Bayesian_Methods/: tutorial_bayesian.py  tutorial_mc_batch_norm.py  tutorial_mc_dropout.py  tutorial_muad_mc_drop.py
auto_tutorials_source/Classification/: README.txt  tutorial_bayesian.py  tutorial_mc_batch_norm.py  tutorial_mc_dropout.py  tutorial_pe_cifar10.py
auto_tutorials_source/Ensemble_Methods/: tutorial_from_de_to_pe.py  tutorial_muad_deep_en.py  tutorial_muad_packed.py  tutorial_pe_cifar10.py
auto_tutorials_source/Evidential_methods/: tutorial_der_cubic.py  tutorial_evidential_classification.py
auto_tutorials_source/Model_Calibration/: README.txt  tutorial_corruption.py
auto_tutorials_source/Regression/: tutorial_der_cubic.py  tutorial_probabilistic_regression.py
auto_tutorials_source/Segmentation/: README.txt  tutorial_muad_seg.py
data/: README.md
docker/: DOCKER.md  entrypoint.sh
docs/: Makefile
docs/source/: api.rst  cli_guide.rst  conf.py  contributing.rst  index.rst  installation.rst  introduction_uncertainty.rst  quickstart.rst  references.rst
experiments/: experiments.py  readme.md
experiments/batched/: resnet18.py
experiments/classification/: README.md  readme.md  resnet_cifar10.py
experiments/masked/: resnet18.py
experiments/packed/: resnet18.py  resnet18_cifar10.py  resnet18_cifar100.py  resnet50.py  resnet50_cifar10.py  resnet50_cifar100.py
experiments/segmentation/: readme.md
experiments/standard/: resnet18.py  resnet18_cifar10.py  resnet18_cifar100.py  resnet50_cifar10.py  resnet50_cifar100.py
scripts/: to_hub_format.py
src/: __init__.py
src/datamodules/: cifar10.py  imagenet.py
src/datasets/: aggregated_dataset.py  cifar_c.py  imagenet_o.py  mixing_set.py  tiny_imagenet.py
src/layers/: __init__.py  packed_layers.py
src/metrics/: __init__.py  entropy.py  fpr95.py  nll.py
src/routines/: classification.py
src/transforms/: __init__.py  pixmix_augmentation.py
tests/: test_cli.py  test_losses.py  test_metrics.py  test_optim_recipes.py  test_optimization_procedures.py  test_optional_dependencies.py  test_utils.py
tests/_dummies/: __init__.py  baseline.py  datamodule.py  dataset.py  model.py  test_dummy_dataset.py  transform.py
tests/assets/: dummy_indices.yaml
tests/baselines/: test_batched.py  test_deep_ensembles.py  test_masked.py  test_mc_dropout.py  test_mimo.py  test_others.py  test_packed.py  test_resnet.py  test_standard.py
tests/datamodules/: test_abstract_datamodule.py  test_camvid.py  test_cifar100_datamodule.py  test_cifar10_datamodule.py  test_depth.py  test_imagenet_datamodule.py  test_minist_datamodule.py  test_mnist_datamodule.py  test_tiny_imagenet_datamodule.py  test_uci_regression.py  test_uci_regression_datamodule.py
tests/datasets/: dummy_dataset.py  test_cifar.py  test_cifar_c.py  test_cifar_h.py  test_dummy_dataset.py  test_imagenet.py  test_imagenet_a.py  test_imagenet_o.py  test_imagenet_r.py  test_kitti.py  test_muad.py  test_regression_toy.py  test_tiny_imagenet.py
tests/layers/: test_batch.py  test_batched_layers.py  test_bayesian.py  test_bayesian_layers.py  test_distributions.py  test_filter_response_norm.py  test_mask.py  test_masked_layers.py  test_masksemble.py  test_norm.py  test_normalization.py  test_packed.py  test_packed_ensemble.py  test_packed_layers.py
tests/losses/: test_bayesian.py  test_classification.py  test_regression.py
tests/metrics/: test_brier_score.py  test_calibration.py  test_calibration_error.py  test_disagreement.py  test_entropy.py  test_fpr95.py  test_grouping_loss.py  test_jensen_shannon_divergence.py  test_mutual_information.py  test_nll.py  test_sparsification.py  test_variation_ratio.py
tests/models/: test_bts.py  test_deep_ensembles.py  test_deeplab.py  test_lenet.py  test_mc_dropout.py  test_mlps.py  test_monte_carlo_dropout.py  test_resnets.py  test_segformer.py  test_stochastic_model.py  test_unet.py  test_vggs.py  test_wideresnets.py
torch_uncertainty/: __init__.py  lightning_cli.py  losses.py  ood_criteria.py  optim_recipes.py  optimization_procedures.py  plotting_utils.py  utils.py  visualization.py
tutorials/: README.rst  cifar_packed_net.pth  pe_cifar10_tutorial.py
(+795 files in other folders)
